# tsuki_optimizer_gui

./: .coderabbit.yaml  Cargo.toml  README.md  config.toml  corpus.txt  initial_layout.toml  run.sh  tsuki_optimize.toml  tsuki_optimizer_gui_design.md
.github/workflows/: ci.yml
src/: chars.rs  config.rs  corpus.rs  cost.rs  layout.rs  lib.rs  main.rs  search.rs  user_layout.rs
