[package]
name = "tsuki_optimize"
version = "1.1.1"
edition = "2021"

[[bin]]
name = "tsuki_optimize"
path = "src/main.rs"

[[bin]]
name = "gui"
path = "src/bin/gui/main.rs"

[dependencies]
rand  = { version = "0.8", features = ["small_rng"] }
serde = { version = "1", features = ["derive"] }
toml         = "0.8"
chrono       = { version = "0.4", default-features = false, features = ["clock"] }
eframe       = "0.31"
egui_plot    = "0.31"

[target.'cfg(unix)'.dependencies]
signal-hook  = "0.3"

[profile.release]
opt-level = 3
lto = true
